[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
minversion = "6.0"
testpaths = [
    "tests",
]
pythonpath = [
  "src"
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["docsismodem*"]  # ["*"] by default
exclude = ["docsismodem.tests*"]  # empty by default
namespaces = false  # true by default