[metadata]
name = docsismodem
version = attr: docsismodem.__version__
author = Andres Petralli
url = https://github.com/andresp/cablemodem-status
description = DOCSIS modem collection tool
long_description = file: README.md
long_description_content_type = text/markdown
keywords = monitoring, influxdb, metrics, docsis, snr, docsis-monitoring
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options.entry_points]
console_scripts =
    retriever = docsismodem.retriever:main

[options]
install_requires =
    astroid==2.12.13
    beautifulsoup4==4.11.1
    certifi==2022.12.7
    chardet==5.1.0
    flask-healthz==1.0.0
    idna==3.4
    influxdb-client==1.35.0
    isort==5.11.4
    lazy-object-proxy==1.8.0
    lxml==4.9.2
    mccabe==0.7.0
    msgpack==1.0.4
    pylint==2.15.9
    python-dateutil==2.8.2
    python-logging-loki==0.3.1
    pytz==2022.7
    requests==2.31.0
    selenium==4.7.2
    rfc3339==6.2
    schedule==1.1.0
    six==1.16.0
    soupsieve==2.3.2.post1
    toml==0.10.2
    urllib3==1.26.13
    wrapt==1.14.1

[options.extras_require]
dev =
    build==1.0.3
    flake8==6.1.0
    pytest==7.4.2
    responses==0.23.3
    flake8-pytest-style==1.7.2
    flask==2.0.0
    werkzeug==2.0.0
